<resources>
    <string name="app_name">GraduatedPartner</string>
    <string name="str_semester_start_title">이번 학기도\n화이팅! (ง°̀ﾛ°́)ง</string>
    <string name="str_semester_start_flower_first">현재 학년 / 학기</string>
    <string name="str_semester_start_flower_second">개강일</string>
    <string name="str_semester_start_flower_third">종강일</string>
    <string name="str_start">시작</string>
    <string name="str_graduated_add_title">졸업요건을 추가하세요</string>
    <string name="str_graduated_delete_title">졸업 요건</string>
    <string name="str_graduated_delete">삭제하기</string>
    <string name="str_graduated_add">추가하기</string>
    <string formatted="false" name="score_percent">%d %%</string>
    <string formatted="false" name="score_subtitle">%s님! %d학점 남으셨어요.</string>
    <string formatted="false" name="score_success_percent">%d%% 달성</string>
    <string formatted="false" name="score_slash_grade">%d/%d학점</string>
    <string name="str_incomplete_graduated">미완료한 졸업요건</string>
    <string name="str_complate_graduated">완료한 졸업요건</string>
    <string name="str_delete">삭제</string>

    <string-array name="subject_type">
        <item>전공필수</item>
        <item>전공</item>
        <item>교양필수</item>
        <item>교양</item>
        <item>P/N</item>
    </string-array>

    <string-array name="grade">
        <item>A+</item>
        <item>A</item>
        <item>B+</item>
        <item>B</item>
        <item>C+</item>
        <item>C</item>
        <item>D+</item>
        <item>D</item>
        <item>F</item>
        <item>P</item>
        <item>N</item>
    </string-array>

    <string-array name="graduated_subject_type">
        <item>교양필수</item>
        <item>자격증</item>
        <item>어학점수</item>
        <item>기타</item>
        <item> </item>
    </string-array>
</resources>
